--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ article, header{
         grid-template: repeat(4, 1fr) / 100%;
         column-gap: 0;
         row-gap: 1em;
+        overflow: scroll;
     }
 
     .container{
